# backend/src/controllers/employeeController.ts
@@ -36,9 +36,16 @@ export interface Employees {
   Notes: string;
   Photo: string;
   PhotoPath: string;
-  Password: string;
-  RoleUser: string;
   State?: string;
+}
+
+export interface createEmployee extends Employees {
+  RoleUser: string;
+  Password: string;
+}
+
+export interface updatePassWordEmployee {
+  Password: string;
 }
 
 export interface SearchEmployees {
@@ -67,10 +74,7 @@ export class employeeController extends Controller {
       );
 
       if (!isCreate) {
-        throw new HttpError(
-          HttpStatus.UNAUTHORIZED,
-          "ผู้ใช้งานนี้ไม่สามารถเพิ่มข้อมูลหรือเรียกดูข้อมูลได้"
-        );
+        return "ผู้ใช้งานนี้ไม่สามารถเพิ่มข้อมูลหรือเรียกดูข้อมูลได้";
       }
 
       if (requestBody) {
@@ -153,7 +157,7 @@ export class employeeController extends Controller {
   @Security("keycloak")
   @SuccessResponse("201", "Created")
   public async createEmployee(
-    @Body() requestBody: Employees,
+    @Body() requestBody: createEmployee,
     @Request()
     req: Express.Request & {
       user: {
@@ -167,10 +171,7 @@ export class employeeController extends Controller {
       );
 
       if (!isCreate) {
-        throw new HttpError(
-          HttpStatus.UNAUTHORIZED,
-          "ผู้ใช้งานนี้ไม่สามารถเพิ่มข้อมูลได้"
-        );
+        return "ผู้ใช้งานนี้ไม่สามารถเพิ่มข้อมูลได้";
       }
 
       const whereData = {
@@ -299,10 +300,7 @@ export class employeeController extends Controller {
       );
 
       if (!isCreate) {
-        throw new HttpError(
-          HttpStatus.UNAUTHORIZED,
-          "ผู้ใช้งานนี้ไม่สามารถแก้ไขข้อมูลได้"
-        );
+        return "ผู้ใช้งานนี้ไม่สามารถแก้ไขข้อมูลได้";
       }
       console.log("requestBody", requestBody);
 
@@ -373,12 +371,6 @@ export class employeeController extends Controller {
             lastName: requestBody.LastName,
           };
 
-          const dataPasswordKeyCloak = {
-            type: "password",
-            value: requestBody.Password,
-            temporary: false,
-          };
-
           const dataUpdataUser = await axios.put(
             `${host}/admin/realms/${realm}/users/${dataKeyCloak.data[0].id}`,
             dataUserKeyCloak,
@@ -389,18 +381,6 @@ export class employeeController extends Controller {
               },
             }
           );
-
-          const dataUpdataPassword = await axios.put(
-            `${host}/admin/realms/${realm}/users/${dataKeyCloak.data[0].id}/reset-password`,
-            dataPasswordKeyCloak,
-            {
-              headers: {
-                Authorization: `Bearer ${token}`,
-                "Content-Type": "application/json",
-              },
-            }
-          );
-          console.log("dataUser", dataUpdataUser, dataUpdataPassword);
 
           const data = await prisma.employee.update({
             data: {
@@ -438,6 +418,90 @@ export class employeeController extends Controller {
     }
   }
 
+  @Patch("UpdatePassword/{id}")
+  @Security("keycloak")
+  @SuccessResponse("200", "Update")
+  public async updateEmployeePassWord(
+    @Path() id: string,
+    @Body() requestBody: updatePassWordEmployee,
+    @Request()
+    req: Express.Request & {
+      user: {
+        role: string[];
+      };
+    }
+  ) {
+    try {
+      const isCreate = req.user.role.some(
+        (item) => item === "admin" || item === "employee"
+      );
+
+      if (!isCreate) {
+        return "ผู้ใช้งานนี้ไม่สามารถแก้ไขข้อมูลได้";
+      }
+      console.log("requestBody", requestBody);
+
+      const dataEmployee = await prisma.employee.findFirst({
+        where: { Id: id },
+      });
+
+      if (dataEmployee) {
+        const dataToken = {
+          client_id: "admin-cli",
+          username: "admin",
+          password: "admin",
+          grant_type: "password",
+        };
+
+        const tokenKeyCloak = await axios.post(
+          `${host}/realms/master/protocol/openid-connect/token`,
+          qs.stringify(dataToken),
+          {
+            headers: {
+              "Content-Type": "application/x-www-form-urlencoded",
+            },
+          }
+        );
+
+        token = tokenKeyCloak.data.access_token;
+        console.log("token", token);
+
+        const dataKeyCloak = await axios.get(
+          `${host}/admin/realms/${realm}/users/?username=${dataEmployee.UserName}`,
+          {
+            headers: {
+              Authorization: `Bearer ${token}`,
+              "Content-Type": "application/json",
+            },
+          }
+        );
+
+        const dataPasswordKeyCloak = {
+          type: "password",
+          value: requestBody.Password,
+          temporary: false,
+        };
+
+        const dataUpdataPassword = await axios.put(
+          `${host}/admin/realms/${realm}/users/${dataKeyCloak.data[0].id}/reset-password`,
+          dataPasswordKeyCloak,
+          {
+            headers: {
+              Authorization: `Bearer ${token}`,
+              "Content-Type": "application/json",
+            },
+          }
+        );
+        console.log("dataUser", dataUpdataPassword);
+        return "อัพเดทรหัสผ่านสำเร็จ";
+      } else {
+        return "ไม่พบข้อมูลผู้ใช้งาน";
+      }
+    } catch (e) {
+      return e;
+    }
+  }
+
   @Delete("{id}")
   @Security("keycloak")
   @SuccessResponse("200", "Delete")
@@ -456,10 +520,7 @@ export class employeeController extends Controller {
       );
 
       if (!isCreate) {
-        throw new HttpError(
-          HttpStatus.UNAUTHORIZED,
-          "ผู้ใช้งานนี้ไม่สามารถลบข้อมูลได้"
-        );
+        return "ผู้ใช้งานนี้ไม่สามารถลบข้อมูลได้";
       }
 
       const dataEmployee = await prisma.employee.findFirst({
